# ddash

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  gantt-implementation-plan.md  package.json  pytest.ini  requirements.txt
.junie/: config.yaml  guidelines.md
backend/: .env.example  conftest.py  db.sqlite3  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
backend/app/: settings.py  urls.py
backend/app/templates/: api_docs.html  redoc.html
backend/calc/: engine.py
backend/core/: admin.py  models.py  serializers.py  views.py
backend/core/fixtures/: initial_core.json
backend/core/management/commands/: load_dump.py
backend/core/migrations/: 0001_initial.py
backend/scheduling/: admin.py  models.py  serializers.py  views.py
backend/scheduling/fixtures/: initial_scheduling.json
backend/scheduling/migrations/: 0001_initial.py
backend/tests/: test_api_crud_and_lists.py  test_api_docs_and_schema.py  test_engine_pytest.py  test_serializers.py
backend/users/: admin.py  models.py
backend/users/management/commands/: create_initial_superuser.py
backend/users/migrations/: 0001_initial.py
deploy/: docker-compose.yml  nginx.conf
doc/: Draft-20250824.md  Draft-20250825.md  SPEC-002-Drilling Campaign Tracker.md  dbschema.md
docs/: README.md  SPEC-002-Drilling Campaign Tracker.md
frontend/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: bootstrap_db_from_dump.sh  bootstrap_real_db.sh  (+7 more)
(+65 files in other folders)
