[project]
name = "drilling-campaign-tracker-backend"
version = "0.0.0"
description = "Backend (Django/DRF/Celery) for Drilling Campaign Tracker"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.venv
  | venv
  | dist
  | build
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
combine_as_imports = true
force_sort_within_sections = true

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations"]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
