[project]
name = "drilling-campaign-tracker-backend"
version = "0.0.0"
description = "Backend (Django/DRF/Celery) for Drilling Campaign Tracker"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
